# plone-stubs

./: Makefile  README.md  pyproject.toml
.github/workflows/: config.yml  main.yml
docs/: LICENSE.md  README.md  pyproject.toml
docs/docs/: conf.py  glossary.md  index.md
docs/docs/concepts/: index.md
docs/docs/how-to-guides/: index.md
docs/docs/reference/: index.md
docs/docs/tutorials/: index.md
news/: +improve-api-stubs.feature  +plone614.feature  +py312.feature
src/Products-stubs/BTreeFolder2/: BTreeFolder2.pyi
src/Products-stubs/CMFCore/: ActionInformation.pyi  ActionProviderBase.pyi  ActionsTool.pyi  CMFBTreeFolder.pyi  CMFCatalogAware.pyi  CachingPolicyManager.pyi  CatalogTool.pyi  ContentTypeRegistry.pyi  CookieCrumbler.pyi  DirectoryView.pyi  DiscussionTool.pyi  DynamicType.pyi  Expression.pyi  FSDTMLMethod.pyi  FSFile.pyi  FSImage.pyi  FSMetadata.pyi  FSObject.pyi  FSPageTemplate.pyi  FSPropertiesObject.pyi  FSPythonScript.pyi  FSReSTMethod.pyi  FSSTXMethod.pyi  FSZSQLMethod.pyi  MemberDataTool.pyi  MembershipTool.pyi  PortalContent.pyi  PortalFolder.pyi  PortalObject.pyi  RegistrationTool.pyi  Skinnable.pyi  SkinsContainer.pyi  SkinsTool.pyi  TypesTool.pyi  URLTool.pyi  UndoTool.pyi  WorkflowCore.pyi  WorkflowTool.pyi  __init__.pyi  exceptions.pyi  (+7 more)
src/Products-stubs/CMFDiffTool/: BaseDiff.pyi  BinaryDiff.pyi  CMFDTHtmlDiff.pyi  CMFDiffTool.pyi  ChangeSet.pyi  FieldDiff.pyi  ListDiff.pyi  TextDiff.pyi  __init__.pyi  choicediff.pyi  dexteritydiff.pyi  namedfile.pyi  utils.pyi
src/Products-stubs/CMFDynamicViewFTI/: browserdefault.pyi  fti.pyi  interfaces.pyi  permissions.pyi
src/Products-stubs/CMFEditions/: ArchivistTool.pyi  CopyModifyMergeRepositoryTool.pyi  KeepLastNVersionsTool.pyi  ModifierRegistryTool.pyi  Modifiers.pyi  Permissions.pyi  ReferenceFactoriesTool.pyi  StandardModifiers.pyi  VersionPolicies.pyi  ZVCStorageTool.pyi  __init__.pyi  historyidhandlertool.pyi  setuphandlers.pyi  subscriber.pyi  utilities.pyi
src/Products-stubs/CMFPlacefulWorkflow/: DefaultWorkflowPolicy.pyi  PlacefulWorkflowTool.pyi  WorkflowPolicyConfig.pyi  __init__.pyi  adapter.pyi  global_symbols.pyi  interfaces.pyi  permissions.pyi  setuphandlers.pyi  upgrades.pyi
src/Products-stubs/CMFPlone/: ActionsTool.pyi  CatalogTool.pyi  MigrationTool.pyi  PasswordResetTool.pyi  PloneBaseTool.pyi  PloneControlPanel.pyi  PloneTool.pyi  Portal.pyi  RegistrationTool.pyi  SkinsTool.pyi  TranslationServiceTool.pyi  TypesTool.pyi  URLTool.pyi  WorkflowTool.pyi  __init__.pyi  bbb.pyi  events.pyi  factory.pyi  log.pyi  relationhelper.pyi  setuphandlers.pyi  traversal.pyi  unicodeconflictresolver.pyi  utils.pyi  workflow.pyi
src/Products-stubs/CMFUid/: UniqueIdAnnotationTool.pyi  UniqueIdGeneratorTool.pyi  UniqueIdHandlerTool.pyi  interfaces.pyi
src/Products-stubs/DCWorkflow/: ContainerTab.pyi  DCWorkflow.pyi  Expression.pyi  Guard.pyi  Scripts.pyi  States.pyi  Transitions.pyi  Variables.pyi  WorkflowUIMixin.pyi  Worklists.pyi  events.pyi  exportimport.pyi  interfaces.pyi  utils.pyi
src/Products-stubs/DateRecurringIndex/: __init__.pyi  index.pyi
src/Products-stubs/ExtendedPathIndex/: ExtendedPathIndex.pyi
src/Products-stubs/ExternalMethod/: ExternalMethod.pyi
src/Products-stubs/Five/: __init__.pyi  fiveconfigure.pyi  fivedirectives.pyi  sizeconfigure.pyi
src/ZTUtils-stubs/: Batch.pyi  Lazy.pyi  SimpleTree.pyi  Tree.pyi  Zope.pyi  __init__.pyi
src/transaction-stubs/: __init__.pyi  _manager.pyi  _transaction.pyi  interfaces.pyi  weakset.pyi
(+1455 files in other folders)
