[project]
name = "plone-stubs"
version = "0.1.0"
description = "Type stubs for selected packages in the plone, and Products namespaces."
readme = "README.md"
authors = [
    { name = "Plone Foundation", email = "releasemanager@plone.org" }
]
requires-python = ">=3.13"
license = "GPL-2.0-only"
dependencies = [
    "mypy",
    "mypy-zope>=1.0.13",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Stubs Only",
]

[project.urls]
Homepage = "https://github.com/plone/plone-stubs#readme"
Changelog = "https://github.com/plone/plone-stubs/blob/main/CHANGELOG.md"
Issues = "https://github.com/plone/plone-stubs/issues"
Source = "https://github.com/plone/plone-stubs"
Repository = "https://github.com/plone/plone-stubs"

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "PyYAML>=6.0.2",
    "mypy>=1.15.0",
    "zest-releaser[recommended]>=9.5.0",
    "zestreleaser-towncrier>=1.3.0",
    "Plone==6.1.3",
    "pytest-plone",
    "zope.pytestlayer",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
namespace = true
module-name = [
    "plone-stubs",
    "Products-stubs",
    "transaction-stubs",
    "ZTUtils-stubs"
]


[tool.uv]
default-groups = ["test"]

[tool.towncrier]
directory = "news/"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
template = "news/.changelog_template.jinja"
issue_format = "[#{issue}]({{ cookiecutter.__repository_url }}/issues/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal:"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation:"
showcontent = true

[[tool.towncrier.type]]
directory = "tests"
name = "Tests"
showcontent = true

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
    "A001",
    "A002",
    "A004",
    "E501",
    "F403",
    "F811",
    "F821",
    "F822",
    "S104",
    "S107",
    "S108",
    "RUF002",
]

[tool.ruff.lint.isort]
case-sensitive = false
no-sections = true
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "RUF001", "S101"]

[tool.mypy]
namespace_packages = true
ignore_missing_imports = true
plugins = 'mypy_zope:plugin'
